@@ -2,6 +2,9 @@ ChangeLog for Nicotine Plus
 
 1.2.6pre2
 INTERFACE CHANGES
+ * Private Chat does not allow you to send messages while offline. New
+   disconnected and reconnected messages appear in the chat log. Another new
+   message is displayed if you were sent messages while offline.
  * Users' Shares lists can be saved to disk and then reloaded them, for ease 
    and speed. On *nix, these files will be stored in ~/.nicotine/usershares/
  * Display shares-scanning errors in the Log Window
@@ -13,7 +16,8 @@ INTERFACE CHANGES
  * Also added icons to the Clear log and the Remove Dislike menu items 
  * Enlarged number entry boxes in Transfer Settings
  * Added thread protection to File/Directory Chooser (was getting freezes)
- SEARCH
+ 
+SEARCH
  * Search's Close button also "ignores" the search, like the X button the tab.
 
 CONFIG
